# jarvis

./: .gitignore  Cargo.toml
doc/: diagrams.drawio
src/: agent.rs  config.rs  error.rs  logger.rs  main.rs  slm.rs
src/agent/: dictionary.rs  mod.rs  prompt.rs  rag.rs
src/command/: dictionary.rs  mod.rs  server.rs
src/util/: net.rs
