[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
chrono = "0.4.20-rc.1"
regex = "1.0"
lazy_static = "1.4"
mongodb = "2.8"
